<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snack"
            android:id="@+id/berenar"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meal"
                android:id="@+id/aliment"
                android:textSize="15sp"
                android:minWidth="60sp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_activity"
                android:id="@+id/fatness"
                android:textSize="15sp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:minWidth="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrates_activity"
                android:id="@+id/carboness"
                android:textSize="15sp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:minWidth="75sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein_noLandscape"
                android:id="@+id/proteinness"
                android:textSize="15sp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:minWidth="60sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories_noLandscape"
                android:id="@+id/calories"
                android:textSize="15sp"
                android:layout_marginTop="24sp"
                android:layout_marginBottom="24sp"
                android:minWidth="50sp" />
            </LinearLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/conjuntSnack"
            android:background="#ffd54f" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15sp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/Snackfab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_folder"
            android:clickable="true"
            android:layout_gravity="bottom|end"/>
    </FrameLayout>

</RelativeLayout>